ビルド定数: BOOST_USE_WINDOWS_H;NOMINMAX;_WINSOCKAPI_;WIN32

--- a/builds/msvc/vs2013/secp256k1/secp256k1.vcxproj
+++ b/builds/msvc/vs2013/secp256k1/secp256k1.vcxproj
@@ -74,6 +74,36 @@
     <Option-schnorr>true</Option-schnorr>
     <Option-recovery>true</Option-recovery>
   </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugDLL|x64'">
+    <ClCompile>
+      <PreprocessorDefinitions>BOOST_USE_WINDOWS_H;NOMINMAX;_WINSOCKAPI_;WIN32;ENABLE_MODULE_SCHNORR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugLIB|x64'">
+    <ClCompile>
+      <PreprocessorDefinitions>BOOST_USE_WINDOWS_H;NOMINMAX;_WINSOCKAPI_;WIN32;ENABLE_MODULE_SCHNORR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugLTCG|x64'">
+    <ClCompile>
+      <PreprocessorDefinitions>BOOST_USE_WINDOWS_H;NOMINMAX;_WINSOCKAPI_;WIN32;ENABLE_MODULE_SCHNORR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseDLL|x64'">
+    <ClCompile>
+      <PreprocessorDefinitions>BOOST_USE_WINDOWS_H;NOMINMAX;_WINSOCKAPI_;WIN32;ENABLE_MODULE_SCHNORR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseLIB|x64'">
+    <ClCompile>
+      <PreprocessorDefinitions>BOOST_USE_WINDOWS_H;NOMINMAX;_WINSOCKAPI_;WIN32;ENABLE_MODULE_SCHNORR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseLTCG|x64'">
+    <ClCompile>
+      <PreprocessorDefinitions>BOOST_USE_WINDOWS_H;NOMINMAX;_WINSOCKAPI_;WIN32;ENABLE_MODULE_SCHNORR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="..\..\..\..\packaging\nuget\gmp\package.bat" />
     <None Include="..\..\..\..\packaging\nuget\gmp\package.config" />
